@@ -84,7 +84,7 @@ protected:
     VM* theVM_;
     virtual void SetUp() {
         mosh_init();
-        Transcoder* transcoder = Transcoder::nativeTranscoder();
+        Transcoder* transcoder = nativeTranscoder();
         const Object inPort    = Object::makeTextualInputPort(new StandardInputPort(), transcoder);
         const Object outPort   = Object::makeTextualOutputPort(new StandardOutputPort(), transcoder);
         errorPort_ = Object::makeStringOutputPort();
